Updated index.html and index_1.html

--- a/index.html
+++ b/index.html
@@ -1,322 +1,13 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <!--
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135441837-1"></script>
-		<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
-
-		gtag('config', 'UA-135441837-1');
-		</script>
-
-		<title>Hybrid Cloud Club || AWS : Azure : Google</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body class="homepage is-preload">
-		<div id="page-wrapper">
-
-			<!-- Header -->
-				<div id="header-wrapper">
-					<div class="container">
-
-						<!-- Header -->
-							<header id="header">
-								<div class="inner">
-
-									<!-- Logo -->
-										<h1><a href="index.html" id="logo">Hybrid Cloud Club</a></h1>
-
-									<!-- Nav -->
-										<nav id="nav">
-											<ul>
-												<li class="current_page_item"><a href="index.html">Home</a></li>
-												<li>
-													<a href="#">About HCC</a>
-													<ul>
-														<li><a href="index.html#BIG3">Cloud Big 3</a></li>
-														<li><a href="index.html#HIGH">Highlight</a></li>														
-													</ul>
-												</li>
-												<li><a href="project.html">Project Highlight</a></li>
-												<li><a href="#CONTACT">Contact</a></li>
-											</ul>
-										</nav>
-
-								</div>
-							</header>
-
-						<!-- Banner -->
-							<div id="banner">
-								<h2><strong>Hybrid Cloud Club:</strong> Look at the clouds!
-								<br />
-								built on HTML5 and CSS3, hosted in S3:AWS with traffic analyzed by Google</h2>
-								<p>Check out our latest project by clicking the big shiny button.</p>
-								<a href="project.html" class="button large icon fa-check-circle">Click here</a>
-							</div>
-
-					</div>
-				</div>
-
-			<!-- Main Wrapper -->
-				<div id="main-wrapper">
-					<div class="wrapper style1">
-						<div class="inner">
-
-							<!-- Feature 1 -->
-								<section class="container box feature1">
-									<div class="row">
-										<div class="col-12">
-											<header class="first major">
-												<h2 id="BIG3">Hybrid Cloud environments are our passion and we endeavor to learn more daily!</h2>
-												<p>Between AWS, Azure and the Google Cloud platform <strong>we are constantly building projects and developing architectures</strong> ...</p>
-											</header>
-										</div>
-										<div class="col-4 col-12-medium">
-											<section>
-												<a href="#" class="image featured"><img src="images/amazon.jpg" alt="" /></a>
-												<header class="second icon fa-user">
-													<h3>Amazon Web Services (AWS)</h3>
-													<p>From S3 to Route53</p>
-												</header>
-											</section>
-										</div>
-										<div class="col-4 col-12-medium">
-											<section>
-												<a href="#" class="image featured"><img src="images/microsoft.jpg" alt="" /></a>
-												<header class="second icon fa-cog">
-													<h3>Microsoft Azure</h3>
-													<p>From Azure AD to MS SQL</p>
-												</header>
-											</section>
-										</div>
-										<div class="col-4 col-12-medium">
-											<section>
-												<a href="#" class="image featured"><img src="images/google.jpg" alt="" /></a>
-												<header class="second icon fa-bar-chart-o">
-													<h3>Google Cloud Platform</h3>
-													<p>From G Suite to Big Query</p>
-												</header>
-											</section>
-										</div>
-									</div>
-								</section>
-
-						</div>
-					</div>
-					<div class="wrapper style2">
-						<div class="inner">
-
-							<!-- Feature 2 -->
-								<section class="container box feature2">
-									<div class="row">
-										<div class="col-6 col-12-medium">
-											<section>
-												<header class="major">
-													<h2>Serverless Computing</h2>
-													<p>Is the wave of the future or fad passing fast?</p>
-												</header>
-												<p>Is it real or are you just running our workloads on another companies computer while they pass on
-												savings to you through a pay-as-use model? Either way it is an interesting topic to discuss.  This website was
-												essentially built using the serverless model.  We procured a domain name, provisioned some static assets, created
-												some content and pushed out to production.
-												</p>
-												<footer>
-													<a href="project.html" class="button medium icon fa-arrow-circle-right">Initial Project</a>
-												</footer>
-											</section>
-										</div>
-										<div class="col-6 col-12-medium">
-											<section>
-												<header class="major">
-													<h2>Indentity focused security</h2>
-													<p>The new boundary and a different perimeter.</p>
-												</header>
-												<p>As data proliferation continues, the idea that we must secure individual access credentials and
-													subsequently the multiple borders around data residing in a multitude of applications will be primary
-												  topic of conversation when discussing the cloud. We need single-sign-on, multi-factor authentication, federation
-												and access auditing to remain in the know.</p>
-												<footer>
-													<a href="id.html" class="button medium alt icon fa-info-circle">Identity security</a>
-												</footer>
-											</section>
-										</div>
-									</div>
-								</section>
-
-							</div>
-					</div>
-					<div class="wrapper style3">
-						<div class="inner">
-							<div class="container">
-								<div class="row">
-									<div class="col-8 col-12-medium">
-
-										<!-- Article list -->
-											<section class="box article-list">
-												<h2 id="HIGH" class="icon fa-file-text-o">Tool highlight</h2>
-
-												<!-- Excerpt -->
-													<article class="box excerpt">
-														<a href="#" class="image left"><img src="images/harddrive.jpg" height="180" width="167" alt="" /></a>
-														<div>
-															<header>
-																<span class="date">Simple Storage Service (S3)</span>
-																<h3>A flagship service from Amazon</h3>
-															</header>
-															<p>Data can be considered the basis for all.  What is there to protect is there is no data.  This
-																scalable storage solution is used for Hybrid Cloud Club and many other entities.  This scalable,
-																easy to use, and durable service provides a block storage basis that is hard to compete with.
-															</p>
-														</div>
-													</article>
-
-												<!-- Excerpt -->
-													<article class="box excerpt">
-														<a href="#" class="image left"><img src="images/route53.jpg" height="180" width="167" alt="" /></a>
-														<div>
-															<header>
-																<span class="date">Route 53</span>
-																<h3><a href="#">The information super highway</a></h3>
-															</header>
-															<p>Routing traffic can be difficult but it is necessary.  Route 53 is a great way to manage global traffic.
-															Using this service, you can connect multiple services in one place and collaborate across your hybrid 
-															environments.  From development, to test, to production Route 53 has us covered.  
-															</p>
-														</div>
-													</article>
-
-												<!-- Excerpt -->
-													<article class="box excerpt">
-														<a href="#" class="image left"><img src="images/directory.jpg" height="180" width="167" alt="" /></a>
-														<div>
-															<header>
-																<span class="date">Azure AD</span>
-																<h3><a href="#">Active Directory in flight</a></h3>
-															</header>
-															<p>Microsoft AD is a well developed baseline tool in many IT shops. Azure AD Microsoft's cloud-based 
-																identity service.  It can help connect users to internal and external services including Office 365, Box 
-																and more.
-															</p>
-														</div>
-													</article>
-
-											</section>
-									</div>
-									<div class="col-4 col-12-medium">
-
-										<!-- Spotlight -->
-											<section class="box spotlight">
-												<h2 class="icon fa-file-text-o">Spotlight</h2>
-												<article>
-													<a href="#" class="image featured"><img src="images/analytics.jpg" height="210" width="145" alt=""></a>
-													<header>
-														<h3><a href="#">Google Analytics</a></h3>
-														<p>Time for the query and the analysis.</p>
-													</header>
-													<p>It will continue to always be about data.  What is the data telling us?</p>
-													<p>We want to undertand our engagement with team and the cloud community.  Google analytics is the basis for this 
-														engagement and analysis.</p>
-													<footer>
-														<a href="https://twitter.com/HybridCloudClu1" target="new" class="button alt icon fab fa-twitter">Contact us on twitter</a>
-													</footer>
-												</article>
-											</section>
-
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-			<!-- Footer Wrapper -->
-				<div id="footer-wrapper">
-					<footer id="footer" class="container">
-						<div class="row">
-							<div class="col-3 col-6-medium col-12-small">
-
-								<!-- Links -->
-									<section>
-										<h2>Contributors</h2>
-										<ul class="divided">
-											<li><a href="https://www.linkedin.com/in/rickjames/" target="new">Patrick James, Founder</a></li>
-										</ul>
-									</section>
-
-							</div>
-							<div class="col-3 col-6-medium col-12-small">
-
-								<!-- Links -->
-									<section>
-										<h2>Cloud Providers</h2>
-										<ul class="divided">
-											<li><a href="https://aws.amazon.com" target="new">Amazon Web Services</a></li>
-											<li><a href="https://azure.microsoft.com/en-us/" target="new">Microsoft Azure</a></li>
-											<li><a href="https://cloud.google.com/" target="new">Google Cloud Platform</a></li>
-										</ul>
-									</section>
-
-								<!-- Links -->
-									<section>
-										<h2>Sponsors</h2>
-										<ul class="divided">
-											<li><a href="https://www.330amtech.com" target="new" >3:30 AM Technologies</a></li>											
-										</ul>
-									</section>
-
-							</div>
-							<div class="col-6 col-12-medium imp-medium">
-
-								<!-- About -->
-									<section>
-										<h2><strong>Hybrid Cloud Club</strong> Connected</h2>
-										<p>We are always looking to collaborate. <strong>Please contact us.</strong> </p>
-										<a href="https://hybridcloudclub.slack.com/" target="new" class="button alt icon fab fa-slack">HCC on Slack</a>
-									</section>
-
-								<!-- Contact -->
-									<section>
-										<h2 id="CONTACT">Get in touch</h2>
-										<div>
-											<div class="row">
-												<div class="col-6 col-12-small">
-													<dl class="contact">
-														<dt>Twitter</dt>
-														<dd><a href="https://twitter.com/HybridCloudClu1" target="new" >@HybridCloudClub</a></dd>
-													</dl>
-												</div>
-											</div>
-										</div>
-									</section>
-
-							</div>
-							<div class="col-12">
-								<div id="copyright">
-									<ul class="menu">
-										<li>&copy; Hybrid Cloud Club. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</footer>
-				</div>
-
-		</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Hybrid Cloud Club</title>
+  </head>
+  <body>
+    <div id="app"></div>
+  </body>
 </html>
